--- a/Clone Website.htm
+++ b/Clone Website.htm
@@ -44,7 +44,7 @@
       <div class="float-end col" >
         
         <button class="btn  fontwhite float-end button1" type="button" style="width: 90px;">Sign up</button>
-        <a href="F:\portfolio\finished\log in page.htm"><button class="btn fontwhite float-end button1" type="button" style="width: 90px;">Log in</button></a>
+        <a href="https://github.com/vikiye/portfolio/blob/main/log%20in%20page.htm"><button class="btn fontwhite float-end button1" type="button" style="width: 90px;">Log in</button></a>
       </div>
     </nav>
     <!--Responsive1-->
@@ -57,7 +57,7 @@
       <a class="navbar-brand brandfont" href="#">
         dribbble
       </a>
-      <a href="F:\portfolio\finished\log in page.htm"><button class="btn  me-md-2 btn-outline-none button1" type="button">Log in</button></a>
+      <a href="https://github.com/vikiye/portfolio/blob/main/log%20in%20page.htm"><button class="btn  me-md-2 btn-outline-none button1" type="button">Log in</button></a>
     </nav>
       
 
