--- a/recipe search.html
+++ b/recipe search.html
@@ -55,7 +55,7 @@
       <a class="navbar-brand brandfont" href="#" style="color: black;">
         Good<span style="color: #32b768;">Recipe</span>
       </a>
-      <a href="F:\portfolio\finished\log in page.htm"><button class="me-md-2 btn-outline-none button1" type="button" style="font-size: large;">Log in</button></a>
+      <a href="#"><button class="me-md-2 btn-outline-none button1" type="button" style="font-size: large;">Log in</button></a>
     </nav>
 <!--Responsive1-->
 <div class="fontchange">
