--- a/recipe search.html
+++ b/recipe search.html
@@ -40,7 +40,7 @@
       </ul>
     
       <div class="float-end col" >
-        <a href="F:\portfolio\finished\log in page.htm"><button class="button1 float-end" type="button" style="width: 90px;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" style="margin-right: 5px;" viewBox="0 0 16 16">
+        <a href="#"><button class="button1 float-end" type="button" style="width: 90px;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" style="margin-right: 5px;" viewBox="0 0 16 16">
           <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
         </svg>Log in</button></a>
       </div>
