--- a/recipe search.html
+++ b/recipe search.html
@@ -5,7 +5,7 @@
 
     <title>Recipe Search</title>
     <link rel="stylesheet" href="E:\Google Download\css\bootstrap.css">
-    <link rel="stylesheet" href="F:\portfolio\finished\recipecss.css"> 
+    <link rel="stylesheet" href="recipecss.css"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -74,7 +74,7 @@
 
     
 
-    <script src="F:\portfolio\finished\recipejs.js"></script>
+    <script src="recipejs.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </body>
 </html>
