--- a/Todolist.html
+++ b/Todolist.html
@@ -5,7 +5,7 @@
 
     <title>Create, Read, Update, Delete</title>
     <link rel="stylesheet" href="E:\Google Download\css\bootstrap.css">
-    <link rel="stylesheet" href="F:\portfolio\portfolio\todocss.css"> 
+    <link rel="stylesheet" href="todocss.css"> 
 <style>
   
   </style>
@@ -61,6 +61,6 @@ function myFunction(){
   </script>
   
 
-    <script src="F:\portfolio\portfolio\todojs.js"></script>
+    <script src="todojs.js"></script>
   </body>
 </html>
