--- a/recipe search.html
+++ b/recipe search.html
@@ -6,7 +6,7 @@
     <title>Recipe Search</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="main\recipecss.css"> 
+    <link rel="stylesheet" href="recipecss.css"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -41,7 +41,7 @@
       </ul>
     
       <div class="float-end col" >
-        <a href="F:\portfolio\finished\log in page.htm"><button class="button1 float-end" type="button" style="width: 90px;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" style="margin-right: 5px;" viewBox="0 0 16 16">
+        <a href="#"><button class="button1 float-end" type="button" style="width: 90px;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" style="margin-right: 5px;" viewBox="0 0 16 16">
           <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
         </svg>Log in</button></a>
       </div>
@@ -56,7 +56,7 @@
       <a class="navbar-brand brandfont" href="#" style="color: black;">
         Good<span style="color: #32b768;">Recipe</span>
       </a>
-      <a href="F:\portfolio\finished\log in page.htm"><button class="me-md-2 btn-outline-none button1" type="button" style="font-size: large;">Log in</button></a>
+      <a href="#"><button class="me-md-2 btn-outline-none button1" type="button" style="font-size: large;">Log in</button></a>
     </nav>
 <!--Responsive1-->
 <div class="fontchange">
@@ -75,7 +75,7 @@
 
     
 
-    <script src="main\recipejs.js"></script>
+    <script src="recipejs.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </body>
 </html>
