--- a/Todolist.html
+++ b/Todolist.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Create, Read, Update, Delete</title>
-    <link rel="stylesheet" href="E:\Google Download\css\bootstrap.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="todocss.css"> 
 <style>
   
