--- a/Clone Website.htm
+++ b/Clone Website.htm
@@ -7,7 +7,7 @@
 <title>Clone Website - Dribbble</title>
 <link rel="stylesheet" href="E:\Google Download\css\bootstrap.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-<link rel="stylesheet" href="clonecss.css">
+<link rel="stylesheet" href="cloneweb.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
 <link rel="preconnect" href="https://fonts.gstatic.com">
